--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,8 @@
 {
-  "cron": {
-    "jobs": [
-      {
-        "path": "/api/tweet",
-        "schedule": "30 18 * * *"
-      }
-    ]
-  }
+  "scheduled": [
+    {
+      "path": "/api/tweet",
+      "schedule": "30 18 * * *"
+    }
+  ]
 }
